Fixes #3998: In MyRestyaboards iOS app, in the organizations listing page if the use tries to delete organization, the delete message alignment is broken issue fixed

--- a/client/css/custom.less
+++ b/client/css/custom.less
@@ -2646,3 +2646,7 @@ header{
 .left-mar{
 	margin-left: 5px;
 }
+.wrap-text {
+	word-wrap: break-word;
+	white-space: normal;
+}
